Geometry nodes Volume Cube crashes when volume is zero #99004

Closed
opened 2022-06-20 04:32:42 +02:00 by Rygel · 19 comments

System Information
Operating system: Linux 5.10.117-1-MANJARO
Graphics card: AMD ATI Radeon RX 580

Blender Version
Broken: 3.3.0 alpha (since 838c4a97f1)

Short description of error
Sometimes when dragging either of the limits of the node Volume Cube, it will crash when they are equal to each other. Other times, it will correctly report that the volume is zero, avoiding the crash.

Exact steps for others to reproduce the error

  • Open .blend file
  • Select Volume Cube node
  • select all three min input (click and drag down)
  • Type 1.0001 (Will crash)
    Will also crash on dragging all the values of the "min" input until they are at 1.0 (The input must be dragged all at once, or it won't crash)

volume crash.blend

**System Information** Operating system: Linux 5.10.117-1-MANJARO Graphics card: AMD ATI Radeon RX 580 **Blender Version** Broken: 3.3.0 alpha (since 838c4a97f1) **Short description of error** Sometimes when dragging either of the limits of the node Volume Cube, it will crash when they are equal to each other. Other times, it will correctly report that the volume is zero, avoiding the crash. **Exact steps for others to reproduce the error** - Open .blend file - Select `Volume Cube` node - select all three `min` input (click and drag down) - Type 1.0001 (Will crash) Will also crash on dragging all the values of the "min" input until they are at 1.0 (The input must be dragged all at once, or it won't crash) [volume crash.blend](https://archive.blender.org/developer/F13205314/volume_crash.blend)
Author

Added subscriber: @rygelXVI

Added subscriber: @rygelXVI

#100087 was marked as duplicate of this issue

#100087 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lateasusual

Added subscriber: @lateasusual

Closed as duplicate of #94969

Closed as duplicate of #94969

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Thanks for the report. I'm assuming this was what was fixed on 522dcc54af.

In the future remember to include the hash of the Blender build you used for test (if you report the bug from within Blender it is filled automatically). Otherwise it is hard to tell if it was fixed already.

Thanks for the report. I'm assuming this was what was fixed on 522dcc54af. In the future remember to include the hash of the Blender build you used for test (if you report the bug from within Blender it is filled automatically). Otherwise it is hard to tell if it was fixed already.
Member

Changed status from 'Duplicate' to: 'Confirmed'

Changed status from 'Duplicate' to: 'Confirmed'
Member

Can still repro crash in recent buildbot build. So reopening the ticket :)
(Also I've made some edits in task description)

Can still repro crash in recent buildbot build. So reopening the ticket :) (Also I've made some edits in task description)
Member

Added subscribers: @brecht, @JacquesLucke

Added subscribers: @brecht, @JacquesLucke
Member

Hm, that's annoying, there is an assert in openvdb:
image.png

The geometry nodes side feels quite reasonable, not sure if there is really an error in the logic. We could clamp the values on geometry nodes, which would help solve the crash in that specific case (at the cost of a wrong result), but not the more general case. For example, using the Transform node to scale the volume down a lot would still result in this crash. The only real solution I see right now is that we could store a transformation matrix on top of the transform stored in an opengdb grid. @brecht what do you think about that?

Hm, that's annoying, there is an assert in openvdb: ![image.png](https://archive.blender.org/developer/F13318460/image.png) The geometry nodes side feels quite reasonable, not sure if there is really an error in the logic. We could clamp the values on geometry nodes, which would help solve the crash in that specific case (at the cost of a wrong result), but not the more general case. For example, using the Transform node to scale the volume down a lot would still result in this crash. The only real solution I see right now is that we could store a transformation matrix on top of the transform stored in an opengdb grid. @brecht what do you think about that?

An additional transformation matrix I guess will make the API and I/O more complicated? I'm not sure how that would map for renderers, exporters or saving OpenVDB files.

Would it be bad to generate an empty grid with unit scale (maybe keep translation and rotation)? The Transform node could do the same. It's somewhat inconsistent with other geometry types, but if you scale a mesh down to zero with the Transform node it is also effectively destroyed, so I'm not sure it matters much.

An additional transformation matrix I guess will make the API and I/O more complicated? I'm not sure how that would map for renderers, exporters or saving OpenVDB files. Would it be bad to generate an empty grid with unit scale (maybe keep translation and rotation)? The Transform node could do the same. It's somewhat inconsistent with other geometry types, but if you scale a mesh down to zero with the Transform node it is also effectively destroyed, so I'm not sure it matters much.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

I agree with Brecht that supporting this case is not worth the complication in other areas. The additional matrix would also have a performance cost when sampling volumes.
I don't have much of an opinion on how to solve this otherwise though. Generating an empty grid seems fine to me.

I agree with Brecht that supporting this case is not worth the complication in other areas. The additional matrix would also have a performance cost when sampling volumes. I don't have much of an opinion on how to solve this otherwise though. Generating an empty grid seems fine to me.

I think an empty grid would be sensible.

I think an empty grid would be sensible.
Member

Added subscriber: @B2Z

Added subscriber: @B2Z

This issue was referenced by e3a6a2f412

This issue was referenced by e3a6a2f41284f90b01065309dbe2cfb97a292b41
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-08-29 17:00:35 +02:00
Thomas Dinges added this to the 3.3 LTS milestone 2023-02-08 15:37:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99004
No description provided.